--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>de.micromata</groupId>
     <artifactId>jiraRestClient</artifactId>
-    <version>2.4</version>
+    <version>2.4.1</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -133,5 +133,11 @@
                 <!--</executions>-->
             <!--</plugin>-->
         </plugins>
+        <testResources>
+            <testResource>
+                <directory>src/test/resource</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
     </build>
 </project>
